--- a/css/style.css
+++ b/css/style.css
@@ -63,6 +63,11 @@
 
 @import './global.css';
 
+.documents-inner {
+    display: grid;
+    grid-template-columns: auto auto auto auto;
+}
+
 .documents-item {
     -webkit-box-shadow: var(--shadow);
             box-shadow: var(--shadow);
@@ -144,6 +149,9 @@
     -webkit-box-pack: center;
         -ms-flex-pack: center;
             justify-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
 }
 
 .document-download-btn {
@@ -194,4 +202,9 @@
         flex-wrap: wrap;
     gap: 10px;
     margin: 30px 0;
+}
+
+.document-download {
+    font-size: 10px;
+    color: #999;
 }
