--- a/css/style.css
+++ b/css/style.css
@@ -68,6 +68,27 @@
     grid-template-columns: auto auto auto auto;
 }
 
+@media(max-width: 980px) {
+    .documents-inner {
+        grid-template-columns: auto auto auto;
+        justify-items: center;
+    }
+}
+
+@media(max-width: 730px) {
+    .documents-inner {
+        grid-template-columns: auto auto;
+        justify-items: center;
+    }
+}
+
+@media(max-width: 490px) {
+    .documents-inner {
+        grid-template-columns: auto;
+        justify-items: center;
+    }
+}
+
 .documents-item {
     -webkit-box-shadow: var(--shadow);
             box-shadow: var(--shadow);
