--- a/css/style.css
+++ b/css/style.css
@@ -63,38 +63,21 @@
 
 @import './global.css';
 
-
-/*hashtags*/
-.document-hashtag-item {
-    font-size: 12px;
-    color: #f6f6f6;
-    background-color: #999;
-    display: inline-block;
-    padding: 2px 3px;
-    border-radius: 5px;
-}
-
-.document-hashtag-item a {
-    color: #fff;
-}
-
-.document-hashtags-block {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -ms-flex-wrap: wrap;
-        flex-wrap: wrap;
-    gap: 10px;
-    margin: 30px 0;
-}
 .documents-inner {
     display: grid;
     grid-template-columns: auto auto auto auto;
+    justify-items: center;
 }
 
 @media(max-width: 980px) {
     .documents-inner {
         grid-template-columns: auto auto auto;
+        justify-items: center;
+    }
+}
+@media(max-width: 870px) {
+    .documents-inner {
+        grid-template-columns: auto auto;
         justify-items: center;
     }
 }
@@ -121,11 +104,14 @@
     margin: 10px;
     border-radius: 5px;
     overflow: hidden;
+    margin-bottom: 30px;
 }
 
 .document-item-image {
     position: relative;
     cursor: pointer;
+    height: 250px;
+    overflow: hidden;
 }
 
 .document-item-image:before {
@@ -135,7 +121,7 @@
     bottom: 0;
     right: 0;
     left: 0;
-    background-color: rgba(0, 0, 0, .1);
+    background-color: rgba(255, 255, 255, .1);
 }
 
 .document-preview img {
@@ -191,20 +177,16 @@
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
-    -webkit-box-pack: center;
-        -ms-flex-pack: center;
-            justify-content: center;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
     -webkit-box-align: center;
         -ms-flex-align: center;
             align-items: center;
 }
 
 .document-download-btn {
-    background-color: transparent;
-    border: none;
     color: var(--dark);
-    padding: 10px 20px;
-    border-radius: 5px;
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
@@ -228,4 +210,83 @@
 .document-download {
     font-size: 10px;
     color: #999;
+}
+
+.documents-search {
+    height: -webkit-fit-content;
+    height: -moz-fit-content;
+    height: fit-content;
+    margin-bottom: 30px;
+    max-width: 100%;
+    position: relative;
+    margin: 30px 0;
+}
+
+
+.documents-search-input {
+    padding: 10px;
+    border: 1px solid #e0e0e0;
+    border-radius: 5px;
+    width: 100%;
+    -webkit-box-sizing: border-box;
+            box-sizing: border-box;
+    padding-left: 35px;
+}
+
+.document-search-label {
+    position: absolute;
+    z-index: 999;
+    top: 12px;
+    left: 8px;
+    cursor: pointer;
+}
+
+
+.documents-wrapper {
+    margin-top: 50px;
+}
+
+.documents-wrapper-inner {
+    display: grid;
+    grid-template-columns: 1fr 4fr;
+}
+
+@media(max-width: 890px) {
+    .documents-wrapper-inner {
+        display: grid;
+        grid-template-columns: 1fr 5fr;
+    }
+}
+
+/*hashtags*/
+.document-hashtag-item {
+    font-size: 12px;
+    color: #999;
+    display: inline-block;
+    padding: 2px 3px;
+    border-radius: 5px;
+}
+
+.document-hashtag-item a {
+    color: #999;
+    -webkit-transition: all .2s linear;
+    -o-transition: all .2s linear;
+    transition: all .2s linear;
+}
+
+.document-hashtag-item a:hover {
+    color: var(--blue);
+    -webkit-transition: all .2s linear;
+    -o-transition: all .2s linear;
+    transition: all .2s linear;
+}
+
+.document-hashtags-block {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+    gap: 10px;
+    margin: 30px 0;
 }
